# Rk2

./: CMakeLists.txt  CPack.cmake  README.md  Testy.cpp
.github/workflows/: test.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  example  program  runTests
